app/assets/stylesheets/layout/_header.scss
.navbar {
  width: 100%;

  &-blue {
    background: $blue;

    .hamburger {
      color: #fff;
    }
  }

  &-wrapper {
    padding: 16px 30px;
    position: relative;
    @include clearfix;

    @include media($desktop-md-max) {
      padding-left: 20px;
      padding-right: 20px;
    }
  }

  .hamburger {
    display: none;
    font-size: 18px;
    line-height: 30px;
    cursor: pointer;

    @include media($tablet-screen-max) {
      display: inline-block;
    }
  }

  // TODO: Поменять на белое лого
  .logo {
    display: inline-block;
    vertical-align: bottom;
    background: image_url("logo-small.svg") no-repeat;
    background-size: cover;
    width: 32px;
    height: 32px;

    @include media($tablet-screen-max) {
      display: none;
    }
  }

  &-profile {
    .avatar, .name, .btn {
      float: left;
    }

    .avatar {
      margin-right: 11px;
      width: 25px;
      height: 25px;
    }

    .name {
      color: #fff;
      font-size: 18px;
      margin-right: 11px;
      font-weight: 700;
      max-width: 155px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .btn-small {
      margin-top: 2px;
      padding: 6px 9px;
    }
  }

  &-menu {
    display: inline-block;
    vertical-align: text-bottom;
    @include media($tablet-screen-max) {
      display: none;
    }

    li {
      display: inline;
      text-transform: uppercase;
      font-weight: bold;
      cursor: pointer;
      margin-left: 35px;
    }

    a {
      color: white;

      &.active, &:hover {
        opacity: 0.7;
      }
    }
  }
}

.content-background {
  background-color: #327ab5;
  height: 398px;
  position: absolute;
  width: 100%;
  z-index: -1;
}

.header-title {
  background: $blue;
  padding: 45px 0 20px;
  @include media($tablet-screen-max) {
    padding-top: 20px;
  }

  h1 {
    font-size: 36px;
    color: white;
    margin-bottom: 0;
  }
}

